# Smart-grocery-inventory-and-management-system

./: .gitignore  BUILD_SUCCESS.txt  BUILD_UI.md  Barcode collection.docx  CMakeLists.txt  IMPLEMENTATION_COMPLETE.txt  Makefile  compile.bat  compile_output.txt  ~$rcode collection.docx
docs/: BUG_FIXES_JANUARY_11.md  CMakeLists.txt  COMPILATION_GUIDE.md  DEPLOYMENT_COMPLETE.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_COMPLETE.md  INPUT_VALIDATION_FIXES.md  INVENTORY_ADMIN_ARCHITECTURE.md  INVENTORY_ADMIN_COMPLETE_OVERVIEW.md  INVENTORY_ADMIN_IMPLEMENTATION.md  INVENTORY_ADMIN_QUICK_REFERENCE.md  INVENTORY_ADMIN_SUMMARY.md  INVENTORY_ADMIN_VERIFICATION.md  PRODUCT_ENHANCEMENT.md  PRODUCT_NAME_VALIDATION.md  PROJECT_STRUCTURE.md  PURCHASE_ORDER_COMPLETE.md  PURCHASE_ORDER_GUIDE.md  PURCHASE_ORDER_IMPLEMENTATION.md  PURCHASE_ORDER_QUICKSTART.md  PURCHASE_ORDER_SCREENS.md  QUICK_START.md  README.md  README_USER_MANAGEMENT.md  SYSTEM_OVERVIEW.md  UNIT_FEATURE.md  USER_MANAGEMENT_GUIDE.md  USER_MANAGEMENT_IMPLEMENTATION.md  USER_MANAGEMENT_QUICK_REFERENCE.md  VISUAL_IMPLEMENTATION_SUMMARY.md  flowchart.md  flowchart.mmd
headers/: Dashboard.h  Database.h  Item.h  Product.h  PurchaseOrder.h  Receiving.h  Sales.h  Supplier.h  UI_Helpers.h  user.h
reports/: Barcode_787891025400.html  Barcode_788017368200.html  Barcode_792150535400.html  Barcode_880000000027.html  Monthly_Sales_Report_2026_01.html  PO-0007_2026_01_07_01_41_34.html  PO-0008_2026_01_07_14_34_09.html  PO-0017_2026_01_08_21_51_13.html  Receipt_20260108_233454.txt  Receipt_20260109_002223.txt  Receipt_20260109_005431.txt  Receipt_20260109_005557.txt  Receipt_20260109_005725.txt  Receipt_20260109_092355.txt  Received_Order_PO-0001.html  Received_Order_PO-0007.html
scripts/: add_last_access_column.sql  add_product_barcode.sql  add_sales_timestamp.sql  compile-ftxui.bat  compile-ftxui.ps1  compile-mingw64.bat  compile-msvc.bat  compile.bat  create_purchase_order_tables.sql  create_receiving_tables.sql  fix_stf002_role.sql  install-mingw64.ps1  migrate_user_schema.sql  run.bat  update_product_schema.sql  update_received_dates.sql  update_supplier_schema.sql  verify_purchase_order_setup.sql
source/: Dashboard.cpp  Sales.cpp  (+8 more)
